src/gool/recognizer/common/parseClass/ParserClassInputTable.jjt

/*
 * ParserClassInputTable.jjt
 */

/*----------------------------------------------------------------------------*/
/* The option used to the generation of a parser */

options {
}


/*----------------------------------------------------------------------------*/
/* The declaration of the input class table parser */

PARSER_BEGIN(ParserClassInputTable)
package gool.recognizer.common.parseClass;
import java.io.*;
import java.util.ArrayList;
import java.util.List;
public class ParserClassInputTable {
  public static void main(String[] args) throws ParseException {
  String chaine ="";
   try{
			InputStream ips=new FileInputStream("src/gool/testMatcher/test"); 
			InputStreamReader ipsr=new InputStreamReader(ips);
			BufferedReader br=new BufferedReader(ipsr);
			String ligne;
			while ((ligne=br.readLine())!=null){
				//System.out.println(ligne);
				chaine+=ligne+"\n";
			}
			br.close(); 
		}		
		catch (Exception e){
			System.out.println(e.toString());
		}
		
		ParserClassInputTable parser = new ParserClassInputTable(new java.io.StringReader(chaine));
    List<ClassWrapperIn> table = parser.parseTable();
    for(ClassWrapperIn wrap : table){
    	wrap.print(); 
    }
  }
}

PARSER_END(ParserClassInputTable)


/*----------------------------------------------------------------------------*/
/* The tokens used to parse */

// Token skipped
SKIP : 
{     " " 
    | "\t" 
    | "\r" 
    | "\n"
    | "#" : IN_LINE_COMMENT
}

<IN_LINE_COMMENT> SKIP:
{
   "\n" : DEFAULT
}

<IN_LINE_COMMENT> MORE:
{
  < ~[] >
}

// Token about type
TOKEN :
{
      < ID: ["a"-"z","A"-"Z","_"] ( ["a"-"z","A"-"Z","_","0"-"9"] )* ( "." ["a"-"z","A"-"Z","_"] ( ["a"-"z","A"-"Z","_","0"-"9"] )* )* >
| < STRING : ("L")? "\""
   ( ( ~["\"","\\","\n","\r"])
   | ("\\" (
             ["n","t","v","b","r","f","a","\\","?","'","\"","\n"]
            |
             "0" (["0"-"7"])*
            |
             ["1"-"9"] (["0"-"9"])*
            |
             ("0x" | "0X") (["0"-"9","a"-"f","A"-"F"])+
           )
     )
   )*
   "\"" >
}

/*----------------------------------------------------------------------------*/
/* The grammar used to parse */

// The root of the grammar
List<ClassWrapperIn> parseTable()  :
{List<ClassWrapperIn> wraps = new ArrayList<ClassWrapperIn>(); ClassWrapperIn wrap; }
{
    (wrap=decl_class_mapping() {wraps.add(wrap);})*  <EOF> {return wraps;}
}

// Used for all nodes declaration
ClassWrapperIn decl_class_mapping() :
{ClassWrapperIn wrap = new ClassWrapperIn();}
{
    gool_class(wrap) "<-" input_class(wrap) 
     { return wrap;}
}

void gool_class(ClassWrapperIn wrap) :
{Token t;}
{
    t=<ID> {wrap.setGoolClass(t.image);}	
}

void input_class(ClassWrapperIn wrap) :
{Token t;}
{
    t=<ID> {wrap.setInputClass(t.image);}	
}
